Project

General

Profile

Actions

Bug #6761

closed

cannot crosscomiple ruby-trunk for arm cortex a8

Added by jinleileiking (lei king) almost 12 years ago. Updated almost 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
trunk
Backport:
[ruby-core:46567]

Description

env:

gentoo64+ angstrom cross compile tool chain.
angstrom-2011.03-x86_64-linux-armv7a-linux-gnueabi-toolchain.tar.bz2

autoreconf

CC=arm-angstrom-linux-gnueabi-gcc env ac_cv_func_setpgrp_void=yes ./configure --host=arm-angstrom-linux-gnueabi --prefix=$HOME/work/ruby --disable-pthread --enable-shared --disable-install-doc

make

compiling vm_dump.c
compiling vm_backtrace.c
compiling thread.c
In file included from thread.c:203:
thread_pthread.c: In function 'ruby_init_stack':
thread_pthread.c:620: error: 'stack_grow_dir_detection' undeclared (first use in this function)
thread_pthread.c:620: error: (Each undeclared identifier is reported only once
thread_pthread.c:620: error: for each function it appears in.)

I have tried 1.9.2. It is okay.

Updated by jinleileiking (lei king) almost 12 years ago

the ruby version is:

Commit 1ea6c81762ff15f5a4fc9c4e458a312492045c39
Author: nobu
Date: Fri Jul 20 07:27:28 2012 +0000

Updated by jinleileiking (lei king) almost 12 years ago

ruby git:(trunk) ✗ make --version
GNU Make 3.82
Built for x86_64-pc-linux-gnu
Copyright (C) 2010 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later http://gnu.org/licenses/gpl.html
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.
➜ ruby git:(trunk) ✗ arm-angstrom-linux-gnueabi-gcc --version
arm-angstrom-linux-gnueabi-gcc (GCC) 4.3.3
Copyright (C) 2008 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

➜ ruby git:(trunk) ✗ autoreconf --version
autoreconf (GNU Autoconf) 2.68
Copyright (C) 2010 Free Software Foundation, Inc.
License GPLv3+/Autoconf: GNU GPL version 3 or later
http://gnu.org/licenses/gpl.html, http://gnu.org/licenses/exceptions.html
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.

Written by David J. MacKenzie and Akim Demaille.
➜ ruby git:(trunk) ✗ uname -a
Linux P330 3.2.12-gentoo #12 SMP Fri Jul 20 23:08:40 CST 2012 x86_64 Intel(R) Core(TM) i3 CPU M 370 @ 2.40GHz GenuineIntel GNU/Linux

Actions #3

Updated by nobu (Nobuyoshi Nakada) almost 12 years ago

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r36487.
lei, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


thread_pthread.c: STACK_GROW_DIR_DETECTION

  • thread_pthread.c (ruby_init_stack): STACK_GROW_DIR_DETECTION is
    necessary on platforms with unknown stack direction. [Bug #6761]
Actions

Also available in: Atom PDF

Like0
Like0Like0Like0