thread_pthread.c: STACK_GROW_DIR_DETECTION

* thread_pthread.c (ruby_init_stack): STACK_GROW_DIR_DETECTION is
  necessary on platforms with unknown stack direction.  [Bug #6761]


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36487 b2dd03c8-39d4-4d8f-98ff-823fe69b080e